added extra nav item to see functionality. added search bar and button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,8 @@ img {
 .navbar {
     background-color: bisque ;
 }
+
+#search-button {
+    background-color: bisque;
+    border: 1px solid gray;
+}
