--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,23 +2,22 @@ main {
     border-radius: 3%;
 } 
 
-
-
 .navbar {
     background-color: bisque ;
 }
 
+/* logo on banner */
 .fixedtop {
     position: absolute;
     left: 10%;
     top: 12%;
     width: 40%;
 }
-.image {
-    width: 300px;
-    /* height: 300px; */
-}
 
+/* .image { */
+    /* width: 300px; */
+    /* height: 300px; */
+/* } */
 
 #search-button {
     background-color: bisque;
@@ -28,5 +27,3 @@ main {
 #image {
     width: 50%;
 }
-
-/* >>>>>>> main */
