--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,17 +48,6 @@ main {
     background: #eee;
 }
 
-
-/* coffee notes stuff */
-#wrapper {
-    font-family: 'Courier New', Courier, monospace;
-}
-
-#coffee-notes {
-    font-weight: bold;
-}
-/* end coffee notes stuff */
-
 #container {
     border: 5px solid black;
     border-radius: 10px 100px / 120px;
@@ -81,14 +70,12 @@ main {
 #nutrition {
     border-style: solid;
     position: relative;
-    bottom: 780px;
-    left:120px;
-    height: 500px;
-    width: 200px;
+    bottom: 380px;
+    left:550px;
 }
 
 .coffeedescription{
     border-style: solid;
-    width: 700px;
-    bottom:2000px;
+    padding: 10px 10px;
+    width: 7add00px;
 }
