--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,8 @@
-main {
-    border-radius: 3%;
-}
-
 .navbar {
     background-color: bisque;
 }
 
 /* logo on banner */
-
 .fixedtop {
     position: absolute;
     left: 10%;
@@ -15,18 +10,9 @@ main {
     width: 40%;
 }
 
-/* .image { */
-/* width: 300px; */
-/* height: 300px; */
-/* } */
-
 #search-button {
     background-color: bisque;
     border: 1px solid gray;
-}
-
-#image {
-    width: 50%;
 }
 
 /* begin auto-complete section
@@ -74,6 +60,7 @@ main {
 }
 /* end coffee notes section */
 
+/* begin main display container section */
 #container {
     border: 5px solid black;
     border-radius: 10px 100px / 120px;
@@ -105,3 +92,4 @@ main {
     padding: 10px 10px;
     width: 7add00px;
 }
+/* end main display container section */
