fixed nav links text color, cleared up extra CSS spaces

--- a/assets/css/styles2.css
+++ b/assets/css/styles2.css
@@ -15,8 +15,8 @@
     color: rgba(245, 245, 245, 1.0);
 }
 
-.navbar-brand {
-    color: rgba(245, 245, 245, 1.0);
+.nav-link {
+    color: whitesmoke;
 }
 
 .body {
@@ -24,7 +24,6 @@
     background-image: url('../images/wallpaperflare.com_wallpaper.jpg');
     background-position: center;
     background-size: auto;
-
 }
 
 .fixedtop {
@@ -76,7 +75,6 @@
     font-weight: bold;
     background-color: #3a2e2e;
     color: whitesmoke;
-
 }
 
 #notes-text {
@@ -85,7 +83,6 @@
     padding: 0px 5px 0px;
     font-family: 'Courier New', Courier, monospace;
     border: solid 0.5px gainsboro;
-
 }
 
 #save-button {
@@ -108,6 +105,4 @@
     border-radius: 500px;
     width: 300px;
     height: auto;
-
-
 }
