--- a/assets/css/styles2.css
+++ b/assets/css/styles2.css
@@ -53,6 +53,8 @@
     color: whitesmoke;
     background-color: #3a2e2e;
     margin-left: 1%;
+    padding-left: 12px;
+    list-style: none;
 }
 
 #result ul {
@@ -61,17 +63,18 @@
     margin: 0;
 }
 
-#result ul li {
+#result li {
     background-color: #3a2e2e;
     color: whitesmoke;
     opacity: .8;
     padding: 5px 0;
 }
 
-#result ul li:hover {
+#result li:hover {
     background-color: whitesmoke;
     color: #3a2e2e;
-    background: #eee;
+    background: whitesmoke;
+    opacity: .8;
 }
 /* end autocomplete section */
 
@@ -117,5 +120,6 @@
 }
 
 #q {
+    color: #3a2e2e;
     background-color: whitesmoke;
 }
