--- a/assets/css/styles2.css
+++ b/assets/css/styles2.css
@@ -1,8 +1,29 @@
+/* global section */
+.body {
+    background-color: #3a2e2e;
+    background-image: url('../images/wallpaperflare.com_wallpaper.jpg');
+    background-position: center;
+    background-size: auto;
+}
+.row{
+    padding: 20px 10px;
+}
+
+.boxes{
+display: flex;
+justify-content: center;
+}
+
+.card {
+    opacity: .8;
+}
+/* end global section */
+
+/* navbar section */
 .navbar {
     background-color: #3a2e2e;
     border-bottom: solid whitesmoke .5px;
     opacity: .6;
-    color: whitesmoke;
 }
 
 .navbar::before {
@@ -19,25 +40,13 @@
 .nav-link {
     color: whitesmoke;
 }
+/* end navbar section */
 
-.body {
-    background-color: #3a2e2e;
-    background-image: url('../images/wallpaperflare.com_wallpaper.jpg');
-    background-position: center;
-    background-size: auto;
-}
-.row{
-    padding: 20px 10px;
-}
-
-img {
+#logo {
     width: 500px;
 }
-.boxes{
-display: flex;
-justify-content: center;
-}
 
+/* searchbar and button section */
 #search-button {
     background-color: #3a2e2e;
     color: whitesmoke;
@@ -45,11 +54,12 @@ justify-content: center;
     border: 1px solid gray;
 }
 
-.form-control {
-    background-color: #3a2e2e;
-    color: whitesmoke;
+#q {
+    color: #3a2e2e;
+    background-color: whitesmoke;
     opacity: .8;
 }
+/* end searchbar and button section */
 
 /* autocomplete section */
 #result {
@@ -58,12 +68,6 @@ justify-content: center;
     margin-left: 1%;
     padding-left: 12px;
     list-style: none;
-}
-
-#result ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
 }
 
 #result li {
@@ -81,10 +85,7 @@ justify-content: center;
 }
 /* end autocomplete section */
 
-.card {
-    opacity: .8;
-}
-
+/* coffee notes section */
 #notes-header {
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
@@ -96,7 +97,8 @@ justify-content: center;
     background-color: whitesmoke;
     color: #3a2e2e;
     padding: 0px 5px 0px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Caveat', cursive;
+    font-size: 20pt;
     border: solid 0.5px gainsboro;
 }
 
@@ -108,7 +110,9 @@ justify-content: center;
     opacity: .8;
     border-radius: 13px;
 }
+/* end coffee notes section */
 
+/* main card display section */
 .card-body {
     background-color: #3a2e2e;
     color: whitesmoke;
@@ -123,12 +127,9 @@ justify-content: center;
     width: 300px;
     height: auto;
 }
+/* end main card display section */
 
-#q {
-    color: #3a2e2e;
-    background-color: whitesmoke;
-}
-
+/* hidden popup section */
 /* .hidden {
     display: none;
 }
@@ -138,6 +139,3 @@ justify-content: center;
     text-align: center;
     margin-top: 100px;
 }
-.boxes {
-    text-align: center;
-} */
