--- a/assets/css/styles2.css
+++ b/assets/css/styles2.css
@@ -116,13 +116,34 @@ justify-content: center;
     opacity: .8;
     border-radius: 13px;
     padding: 10px;
+    text-align: justify;
+    border: solid .1px;
+    border-color: whitesmoke;
 }
-
+.card-title{
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    background-color: #3a2e2e;
+    color: whitesmoke;
+}
+.card-text{
+    background-color: whitesmoke;
+    color: #3a2e2e;
+    padding: 0px 5px 0px;
+    font-family: 'Caveat', cursive;
+    font-size: 20pt;
+    border: solid 0.5px gainsboro;
+    border-radius: 13px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+   
+}
 #coffee-pic {
-    border-color: solid whitesmoke 10px;
-    border-radius: 500px;
-    width: 300px;
-    height: auto;
+    border: solid;
+    border-color: whitesmoke;
+    border-radius: 13px;
+    width: 100%;
+    height: 300px;
 }
 
 
